--- a/requirements-wheel.txt
+++ b/requirements-wheel.txt
@@ -1,9 +1,21 @@
 tree_sitter==0.20.4
 tree_sitter_languages==1.10.2
 
-transformers==4.41.1
 tqdm==4.66.4
 rich==13.7.1
 orjson==3.10.3
 pandas==2.2.2
 
+
+transformers==4.51.0
+torch
+tokenizers
+sentencepiece
+huggingface_hub
+
+chonkie
+unstructured
+pdfminer.six
+python-magic
+Pillow
+pytesseract
