--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,21 @@ pdfminer.six
 python-magic
 Pillow
 pytesseract
+
+chardet>=5.0.0
+
+PyPDF2>=3.0.0
+
+python-docx>=0.8.11
+
+odfpy>=1.4.1
+
+openpyxl>=3.0.9
+
+python-pptx>=0.6.21
+
+striprtf>=0.0.26
+
+beautifulsoup4>=4.11.0
+
+markdown>=3.4.0
